--- a/public/css/main.css
+++ b/public/css/main.css
@@ -33,17 +33,36 @@
 .inside-sidemenu > .box > .box-body > ul > li {
   margin:0px;
   padding: 0px;
+  transition-duration: 0.1s;
+  transition-timing-function: linear;
+  padding: 10px;
+  cursor:pointer;
 }
 .inside-sidemenu > .box > .box-body > ul > li.active{
   background-color: #307096;
 }
 .inside-sidemenu > .box > .box-body > ul > li:hover{
-  background-color: #307096;
+  background-color: #24536f;
+  transition-duration: 0.1s;
+  transition-timing-function: linear;
 }
 .inside-sidemenu > .box > .box-body > ul > li > a{
   color:#fff;
 }
 .inside-sidemenu > .box > .box-body > ul > li > a > h4{
   margin:0px;
+}
+.inside-sidemenu > .box > .box-body > ul > li.footer {
+  background-color: #2a6283;
+  text-align: center;
+  border-top: none;
+  margin:0px;
   padding: 10px;
+}
+.inside-sidemenu > .box > .box-body > ul > li.footer > a {
+  color:#fff;
+  padding:2px;
+}
+.inside-sidemenu > .box > .box-body > ul > li.footer > a:hover {
+  color:#c4dcea;
 }
