--- a/public/css/main.css
+++ b/public/css/main.css
@@ -105,3 +105,17 @@
   border-left-color: transparent;
   border-right-color: transparent;
 }
+select[readonly].select2 + .select2-container {
+  pointer-events: none;
+  touch-action: none;
+
+  .select2-selection {
+    background: #eeeeee;
+    box-shadow: none;
+  }
+
+  .select2-selection__arrow,
+  .select2-selection__clear {
+    display: none;
+  }
+}
