Tambah/Hapus User Assessment, Ubah Target Level Process, Sort Process List berdasarkan Process Name, Pertanyaan Default Collapse

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -191,3 +191,8 @@ select[readonly].select2 + .select2-container {
     display: none;
   }
 }
+
+div.dt-buttons {
+  float: right;
+  margin-left:10px;
+}
